--- a/frontend/src/components/screens/WeatherFooter/weatherFooterSkeleton/WeatherFooterSkeleton.module.scss
+++ b/frontend/src/components/screens/WeatherFooter/weatherFooterSkeleton/WeatherFooterSkeleton.module.scss
@@ -3,12 +3,12 @@
     height: 100%;
     display: flex;
     justify-content: space-around;
+}
 
-    div{
-        padding: 3px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
+.inner {
+    padding: 5px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
