--- a/frontend/src/ui/Skeleton/Skeleton/Skeleton.module.scss
+++ b/frontend/src/ui/Skeleton/Skeleton/Skeleton.module.scss
@@ -4,6 +4,8 @@
     border-radius: 3px;
     background: #D2DBE2;
     animation: loader 1.4s linear infinite;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 .icon {
@@ -11,6 +13,8 @@
     height: 55px;
     background: #D2DBE2;
     border-radius: 7px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     animation: loader 1.4s ease-in-out infinite;
 }
 
