upd: weather shedule

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,6 +1,13 @@
 *{
   margin: 0;
   padding: 0;
+  
+}
+*{
+  scrollbar-color: #6969dd #e0e0e0;
+  scrollbar-width: thin;
+  scrollbar-track-color: #ad4747;
+  scrollbar-color: #5a5ac1;
 }
 
 :root {
