--- a/frontend/src/components/screens/WeatherShedule/WeatherShedule.module.scss
+++ b/frontend/src/components/screens/WeatherShedule/WeatherShedule.module.scss
@@ -1,6 +1,24 @@
 .weatherWrap{
-
+    // padding: 10px;
+ display: flex;
+ width: 100%;
+ height: 100%;
+ column-gap: 10px;
+ overflow-x: auto;
+ scrollbar-width: thin;
+  scrollbar-color: hsl(0 0% 50%);
+  scrollbar-color: #6969dd #e0e0e0;
+  scrollbar-width: thin;
 }
 .weatherCard{
-    
+    text-align: center;
+    border-radius: 20px;
+    background: RGBA(0,0,0,0.1);
+    padding: 0 5px;
+    width: 200px;
+    height: 100%;
+    // margin-right: 10px;
+    p{
+        width: 100%;
+    }
 }
